component alias fix
